# REPO-Otus

./: README.md  main.cpp
Homework 2/: CMakeLists.txt  hello_world.cpp  move_me_out.cpp  move_me_out.h
Homework2/: hello_world.cpp  move_me_out.cpp
Homework3/: CMakeLists.txt
